# hackernews_digest_rust

./: .gitignore  Cargo.toml  README.md  config.json.example  diesel_mysql.toml  diesel_sqlite.toml  docker-compose.yaml
.cargo/: config.toml
.github/workflows/: release.yaml  test.yaml
migrations/2025-01-15-001559_init/: down.sql
migrations/2025-01-24-152328_rss_items/: up.sql
migrations/mysql/2025-01-22-161504_init/: up.sql
migrations/mysql/2025-01-24-152420_rss_items/: down.sql  up.sql
migrations/sqlite/2025-01-15-001559_init/: up.sql
src/: main.rs
src/arg_parse/: mod.rs
src/common/: filter.rs  mod.rs  repository.rs
src/config/: mod.rs
src/feeds/: data_types.rs  fetcher.rs  mod.rs
src/habr/: data_types.rs  fetcher.rs
src/hackernews/: arg_parse.rs  config.rs  data_types.rs  fetcher.rs  filter.rs  mod.rs  repository.rs  sender.rs
src/schemas/: mod.rs  run_migrations.rs  schema.rs
src/sender/: mod.rs
src/storage/: mod.rs
src/vacuum/: mod.rs
