[package]
name = "hackernews-rust"
version = "3.0.0"
edition = "2021"
rust-version = "1.84.0"

[dependencies]
argparse = "=0.2.2"
chrono = "0.4.39"
diesel = { version = "2.2.6", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
lettre = "~0.11"
lettre_email = "0.9"
regex = "1.11.1"
reqwest = { version = "0.12", features = ["json"] }
serde = {version = "~1.0", features = ["derive"]}
serde_json = "~1.0"
tokio = { version = "1", features = ["full"] }
url = "2.5.4"
libsqlite3-sys = { version = "~0.30.1", features = ["bundled"] }
diesel_migrations = { version = "2.2.0", features = ["sqlite"] }
teloxide = { version = "0.13", features = ["macros"] }
rss = "2.0.11"

[dev-dependencies]
httpmock = "0.7.0-rc.1"

[profile.release]
opt-level = "z"
strip = true
