[package]
name = "hackernews-rust"
version = "3.0.4"
edition = "2021"
rust-version = "1.92.0"

[dependencies]
argparse = "=0.2.2"
chrono = "0.4"
diesel = { version = "2.2.11", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
diesel_migrations = { version = "2.2.0", features = ["sqlite"] }
lettre = "~0.11"
lettre_email = "0.9"
libsqlite3-sys = { version = "0.33", features = ["bundled"] }
regex = "1.11.1"
reqwest = { version = "0.12", features = ["json"] }
rss = "2.0"
serde = {version = "~1.0", features = ["derive"]}
serde_json = "~1.0"
teloxide = { version = "0.17", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
url = "2.5"

[dev-dependencies]
httpmock = "0.8.2"

[profile.release]
opt-level = "z"
strip = true
overflow-checks = true     # Catch integer overflows
debug-assertions = true    # Keep debug_assert! in release
lto = true                # Link-time optimization
codegen-units = 1         # Better optimization
